# GrantAtlasAI

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/versions/: 0001_initial.py  0002_contracting_v2.py  0003_ai_narratives.py  0004_tenant_lifecycle.py  0005_onboarding.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: admin.py  auth.py  billing.py  contracts.py  library.py  onboarding.py  opportunities.py  organization.py  partners.py  past_performance.py  proposals.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: seed.py
apps/api/app/models/: __init__.py
apps/api/app/schemas/: __init__.py
apps/api/app/services/: accounts.py  ai.py  billing.py  contract_scoring.py  email.py  grants_gov.py  ingestion.py  sam_gov.py  scoring.py
apps/api/app/workers/: celery_app.py
apps/api/tests/: conftest.py  test_accounts_lifecycle.py  test_auth_security.py  test_billing_reconciliation.py  test_contract_scoring.py  test_onboarding.py  test_proposal_drafting.py  test_scoring.py  test_tenant_isolation.py
apps/web/: .dockerignore  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
docs/: api.md  architecture.md  brand.md  connectors.md  deployment.md  hetzner-hardening-root-ssh.md  implementation-plan.md  owasp-security-review.md  production-deployment.md  roadmap.md  security.md  stripe-setup.md
scripts/: backup_postgres.sh
(+36 files in other folders)
