[project]
name = "grantatlas-api"
version = "0.1.0"
description = "GrantAtlas FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "anthropic>=0.40.0",
  "argon2-cffi>=23.1.0",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "stripe>=10.9.0",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
test = ["pytest>=8.3.2"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
